# crypto-gateway-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_v3.md  build.rs  config.toml  diesel.toml  docker-compose.yml
docs/: README.md
docs/api/: http-api.md
docs/business/: economic-model.md  overview.md
docs/developers/: quick-start.md
proto/: common.proto  transfer.proto  wallet.proto
src/: lib.rs  main.rs
src/application/: dto.rs  mod.rs  state.rs
src/application/services/: activation_service.rs  fee_service.rs  gas_service.rs  mod.rs  monitoring_service.rs  scheduler_service.rs  transfer_service.rs  wallet_service.rs  webhook_service.rs
src/config/: mod.rs
src/domain/: blockchain.rs  entities.rs  enums.rs  errors.rs  mod.rs  tokens.rs  validation.rs
src/infrastructure/: middleware.rs  mod.rs  retry.rs
src/infrastructure/database/: mod.rs  models.rs  schema.rs
src/infrastructure/database/migrations/2025-08-19-151147_create_wallets/: down.sql  up.sql
src/infrastructure/database/migrations/2025-08-19-151208_create_incoming_transactions/: down.sql  up.sql
src/infrastructure/database/migrations/2025-08-19-151349_create_outgoing_transfers/: down.sql  up.sql
src/infrastructure/grpc/: mod.rs  server.rs  services.rs
src/infrastructure/http/: mod.rs  routes.rs
src/infrastructure/http/handlers/: debug.rs  mod.rs  token_handlers.rs  transfer.rs  wallet.rs
src/infrastructure/tron/: client.rs  crypto.rs  mod.rs  token_service.rs
src/utils/: conversions.rs  mod.rs
