[package]
name = "tron-gateway-rust"
version = "0.1.0"
edition = "2021"
authors = ["Anna Karenina <anna@example.com>"]
description = "TRC-20 Payment Gateway на Rust с поддержкой HTTP/gRPC/Kafka транспортов"

[dependencies]
# Веб-фреймворк
actix-web = "4.4"
actix-cors = "0.6"

# gRPC сервер
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Асинхронная среда выполнения
tokio = { version = "1.35", features = ["full"] }

# База данных
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "numeric"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }

# HTTP клиент для TronGrid API
reqwest = { version = "0.11", features = ["json"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Конфигурация
config = "0.13"
envy = "0.4"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Обработка ошибок
anyhow = "1.0"
thiserror = "1.0"

# Типы данных
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Криптография для TRON
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
base58 = "0.2"
rand = "0.8"
protobuf = "3.4"
bytes = "1.6"

[build-dependencies]
tonic-build = "0.10"


[dev-dependencies]
actix-rt = "2.9"
